create basic layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,120 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Abstracttttt</title>
+    <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+    <header>
+        <div class="header-block-left">
+            <p class="heading">Logo</p>
+            <p class="help-center heading">Help Center</p>
+        </div>
+        <div class="header-block-right">
+            <p class="submit heading">Submit a request</p>
+            <p class="sign-in heading">Sign in</p>
+        </div>
+    </header>
+    <section class="search">
+        <h1>How can we help?</h1>
+        <input type="text" placeholder="Search">
+    </section>
+    <section class="learn">
+        <div class="learn-row">
+            <div class="learn-row-one">
+                <p class="p-bold">Using Abstract</p>
+                <p>Abstract lets you manage, version, and document your designs in one place.</p>
+                <p class="learn-more">Learn More</p>
+            </div>
+            <div class="learn-row-two">
+                <p class="p-bold">Manage Your Account</p>
+                <p>Configure your account settings, such as your email, profile details, and password.</p>
+                <p class="learn-more">Learn More</p>
+            </div>
+        </div>
+        <div class="learn-row">
+            <div class="learn-row-one">
+                <p class="p-bold">Manage organizations, teams, and projects
+                </p>
+                <p>Use Abstract organizations, teams, and projects to organize your people and your work.</p>
+                <p class="learn-more">Learn More</p>
+            </div>
+            <div class="learn-row-two">
+                <p class="p-bold">Manage billing</p>
+                <p>Change subscriptions and payment details.</p>
+                <p class="learn-more">Learn More</p>
+            </div>
+        </div>
+        <div class="learn-row">
+            <div class="learn-row-one">
+                <p class="p-bold">Authenticate to Abstract
+                </p>
+                <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
+                <p class="learn-more">Learn More</p>
+            </div>
+            <div class="learn-row-two">
+                <p class="p-bold">
+                    Abstract support</p>
+                <p>Get in touch with a human.</p>
+                <p class="learn-more">Learn More</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-options">
+                <p class="p-bold-two">Abstract</p>
+                <ul>
+                    <li>Start Trial</li>
+                    <li>Pricing</li>
+                    <li>Download</li>
+                </ul>
+            </div>
+            <div class="footer-options">
+                <p class="p-bold-two">Resources</p>
+                <ul>
+                    <li>Blog</li>
+                    <li>Help Center</li>
+                    <li>Release Notes</li>
+                    <li>Status</li>
+                </ul>
+            </div>
+            <div class="footer-options">
+                <p class="p-bold-two">Community</p>
+                <ul>
+                    <li>Twitter</li>
+                    <li>LinkedIn</li>
+                    <li>Facebook</li>
+                    <li>Dribbble</li>
+                    <li>Podcast</li>
+                </ul>
+            </div>
+            <div class="footer-options">
+                <p class="p-bold-two">Company</p>
+                <ul>
+                    <li>About Us</li>
+                    <li>Careers</li>
+                    <li>Legal</li>
+                    <li></li>
+                    <li>Contact Us</li>
+                    <li>info@abstract.com</li>
+                </ul>
+            </div>
+            <div class="footer-options-logo">
+                <p></p>
+            </div>
+        </div>
+        <div class="copyright-container">
+        <div class="copyright-info">
+            <p class="copyright-p">Copyright 2023</p>
+            <p class="copyright-p">Abstract Studio Design, Inc.</p>
+            <p class="copyright-p">All rights reserved</p>
+        </div>
+    </div>
+    </footer>
+    <div class="help">Help</div>
+</body>
+</html>
