--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header-block-left">
-            <p class="heading">Logo</p>
+            <img class="heading" src="https://assets-global.website-files.com/5ff3926f03b3ba26b7d639cb/60c388bf3c3ae4d1d10653e7_Abstract_Wordmark-White.svg" alt="logo" width="130rem">
             <p class="help-center heading">Help Center</p>
         </div>
         <div class="header-block-right">
@@ -25,41 +25,69 @@
     <section class="learn">
         <div class="learn-row">
             <div class="learn-row-one">
+                <div class="block-one">
+                <img class="learn-logos" src="https://theme.zdassets.com/theme_assets/2197739/aed6500f4da41c641f3de5d96247eb6654e9c386.png" alt="abstract">
+            </div>
+            <div class="block-two">
                 <p class="p-bold">Using Abstract</p>
                 <p>Abstract lets you manage, version, and document your designs in one place.</p>
                 <p class="learn-more">Learn More</p>
             </div>
+            </div>
             <div class="learn-row-two">
+                <div class="block-one">
+                    <img class="learn-logos" src="https://theme.zdassets.com/theme_assets/2197739/91588b3d042df901d9b941ccbb57af4f151401c7.png" alt="manage">
+                </div>
+                <div class="block-two">
                 <p class="p-bold">Manage Your Account</p>
                 <p>Configure your account settings, such as your email, profile details, and password.</p>
                 <p class="learn-more">Learn More</p>
             </div>
+            </div>
         </div>
         <div class="learn-row">
             <div class="learn-row-one">
+                <div class="block-one">
+                    <img class="learn-logos" src="https://theme.zdassets.com/theme_assets/2197739/50d0db451c0e1e66e1caddd142986fcf6792ca05.png" alt="manage">
+                </div>
+                <div class="block-two">
                 <p class="p-bold">Manage organizations, teams, and projects
                 </p>
                 <p>Use Abstract organizations, teams, and projects to organize your people and your work.</p>
                 <p class="learn-more">Learn More</p>
             </div>
+            </div>
             <div class="learn-row-two">
-                <p class="p-bold">Manage billing</p>
-                <p>Change subscriptions and payment details.</p>
-                <p class="learn-more">Learn More</p>
+                <div class="block-one">
+                    <img class="learn-logos" src="https://theme.zdassets.com/theme_assets/2197739/3e82d0126e97d7b7c60a611d4e11b3c278d33743.png" alt="manage">
+                </div>
+                <div class="block-two">
+                    <p class="p-bold">Manage billing</p>
+                    <p>Change subscriptions and payment details.</p>
+                    <p class="learn-more">Learn More</p>
+                </div>
             </div>
         </div>
         <div class="learn-row">
             <div class="learn-row-one">
-                <p class="p-bold">Authenticate to Abstract
-                </p>
-                <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
-                <p class="learn-more">Learn More</p>
+                <div class="block-one">
+                    <img class="learn-logos" src="https://theme.zdassets.com/theme_assets/2197739/7712592465ef5c7bf18f1c7cb16e19ab44eb81e3.png" alt="manage">
+                </div>
+                <div class="block-two">
+                    <p class="p-bold">Authenticate to Abstract</p>
+                    <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
+                    <p class="learn-more">Learn More</p>
+                </div>
             </div>
             <div class="learn-row-two">
-                <p class="p-bold">
-                    Abstract support</p>
-                <p>Get in touch with a human.</p>
-                <p class="learn-more">Learn More</p>
+                <div class="block-one">
+                    <img class="learn-logos" src="https://theme.zdassets.com/theme_assets/2197739/dcc25d18e224d12621d74e545cc8bdd1b5685ca8.png" alt="manage">
+                </div>
+                <div class="block-two">         
+                    <p class="p-bold"> Abstract support</p>
+                    <p>Get in touch with a human.</p>
+                    <p class="learn-more">Learn More</p>
+                </div>
             </div>
         </div>
     </section>
