--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abstracttttt</title>
     <link rel="stylesheet" href="style.css"/>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+
 </head>
 <body>
     <header>
@@ -16,6 +18,9 @@
         <div class="header-block-right">
             <p class="submit heading">Submit a request</p>
             <p class="sign-in heading">Sign in</p>
+            <box-icon class='menu-logo' name='search'  size='lg' color='#ffffff'></box-icon>
+            <box-icon class='menu-logo' size='lg' name='menu' color='#ffffff' ></box-icon>
+           
         </div>
     </header>
     <section class="search">
